[package]
name = "zip-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3.77"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
zip = { version = "2.2.2", default-features = false, features = ["deflate"] }
getrandom = { version = "0.2.15", default-features = false, features = ["js"] }

[lib]
crate-type = ["cdylib"]
